# memlink

./: .gitignore  Cargo.toml  README.md
msdk/: .gitignore  Cargo.toml  README.md
msdk-macros/: .gitignore  Cargo.toml  README.md
msdk-macros/examples/: basic.rs
msdk-macros/src/: lib.rs
msdk/benches/: performance.rs
msdk/examples/: basic.rs
msdk/src/: arena.rs  caller.rs  context.rs  dispatch.rs  error.rs  exports.rs  lib.rs  log.rs  macros.rs  metrics.rs  panic.rs  ref.rs  request.rs  serialize.rs
msdk/tests/: integration.rs
protocol/: .gitignore  Cargo.toml  README.md
protocol/benches/: serialization.rs
protocol/examples/: basic.rs
protocol/src/: arena.rs  chunk.rs  config.rs  emsg.rs  error.rs  features.rs  header.rs  lib.rs  magic.rs  msgpack.rs  negotiation.rs  request.rs  response.rs  serializer.rs  shandle.rs  shm.rs  sproto.rs  types.rs  version.rs  zero.rs
protocol/tests/: integration.rs
runtime/: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
runtime/benches/: benchmarks.rs
runtime/docs/: abi.md  perf.md
runtime/examples/: m2dll.rs  m2so.rs
runtime/examples/modules/: README.md  crypto.c  echo.c  math.c  string.c
runtime/src/: abi.rs  arena.rs  error.rs  exports.rs  instance.rs  lib.rs  metrics.rs  mhash.rs  panic.rs  profile.rs  reload.rs  runtime.rs  safety.rs  validation.rs
runtime/src/ffi/: loader.rs  mod.rs  symbols.rs
runtime/src/resolver/: chain.rs  local.rs  mod.rs
runtime/tests/: integration.rs
shm/: .gitignore  Cargo.toml  README.md
shm/benches/: latency.rs  throughput.rs
shm/examples/: p2.rs
shm/src/: buffer.rs  control.rs  futex.rs  layout.rs  lib.rs  platform.rs  pring.rs  priority.rs  recovery.rs  safety.rs  transport.rs
shm/src/mmap/: mod.rs  unix.rs  windows.rs
shm/tests/: integration.rs  perf.rs
