[package]
name = "memlink-msdk"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
authors = ["Radiiplus <radiiplus@gmail.com>"]
license = "Apache-2.0"
description = "memlink SDK - Build modules for the memlink runtime with automatic serialization and FFI exports"
documentation = "https://docs.rs/memlink-msdk"
repository = "https://github.com/Radiiplus/memlink"
homepage = "https://github.com/Radiiplus/memlink"
readme = "README.md"
keywords = ["memlink", "sdk", "modules", "ffi", "ipc"]
categories = ["development-tools", "api-bindings"]
exclude = [
    ".gitignore",
    "tests/",
    "target/",
    "*.log",
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
memlink-msdk-macros = "0.1.0"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
criterion = "0.8.2"

[[bench]]
name = "performance"
harness = false

[features]
default = []
full = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
