[package]
name = "memlink-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Radiiplus <radiiplus@gmail.com>"]
license = "Apache-2.0"
description = "Binary protocol definitions for MemLink IPC - fixed headers, magic constants, and error types"
documentation = "https://docs.rs/memlink-protocol"
repository = "https://github.com/Radiiplus/memlink"
homepage = "https://github.com/Radiiplus/memlink"
readme = "README.md"
keywords = ["protocol", "ipc", "binary", "low-latency", "ffi"]
categories = ["encoding", "network-programming"]
exclude = [
    ".gitignore",
    "tests/",
    "benches/",
    "examples/",
    "target/",
    "*.log",
]

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
memlink-shm = { version = "0.1.3", optional = true }

[features]
default = []
std = []
shm = ["memlink-shm"]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "serialization"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
