[package]
name = "memlink-runtime"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["Radiiplus <radiiplus@gmail.com>"]
license = "Apache-2.0"
description = "Dynamic module loading and execution framework for Rust - plugin architectures, hot-reloadable code, and safe FFI"
documentation = "https://docs.rs/memlink-runtime"
repository = "https://github.com/Radiiplus/memlink"
homepage = "https://github.com/Radiiplus/memlink"
readme = "README.md"
keywords = ["dynamic-loading", "plugins", "hot-reload", "ffi", "modules"]
categories = ["development-tools", "os"]
exclude = [
    ".gitignore",
    "tests/",
    "benches/",
    "examples/",
    "target/",
    "*.log",
    "*.pid",
    "*.so",
    "*.dll",
    "*.dylib",
]

[dependencies]
thiserror = "2.0.18"
libloading = "0.9.0"
dashmap = "6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
memlink-protocol = "0.1.0"

[dev-dependencies]
tempfile = "3.27.0"
cc = "1.2.57"
criterion = "0.8.2"

[[bench]]
name = "benchmarks"
harness = false

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
